Setting up pages

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
+	<!-- Testing Github pages -->
 <head>
 	<title>JJ - Athena Development</title>
 	<link rel="stylesheet" media="all" href="css/local.css"/>
