--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@
 		<div class="row">
 		<div class="sub-row" style="width:250px;">
 			<div id="container" style="background: url('images/fEnPnsY.jpg') no-repeat center center; background-size: cover;">
-				<a href="career">Codename: Sanakan</a>
+				<a href="">Codename: Sanakan</a>
 			</div>
 			<div id="container" style="background: url(images/GjJGtSW.jpg) no-repeat center center; background-size: cover;">
-				<a href="dev/info_sessions/view.php">Codename: Cibo</a>
+				<a href="">Codename: Cibo</a>
 			</div>
 		</div>
 		<div class="sub-row" style="width:400px;">
 			<div id="container" style="background: url(images/PA7N7H5.jpg) no-repeat center center; background-size: cover;width:100%;height:400px;max-width:100%">
-				<a href="dev/flex/default.html">Codename: Killy</a>
+				<a href="">Codename: Killy</a>
 			</div>
 		</div>
 		
 		<!-- <div class="row"> -->
 		<div class="sub-row" style="width:300px;">
 			<div id="container" style="background: url(images/t3_5varnm.jpg) no-repeat center center; background-size: cover;">
-				<a href="dev/alumni/pictures.php">Codename: Seu</a>
+				<a href="">Codename: Seu</a>
 			</div>
 			<div id="container" style="background: url(images/t3_60mu0k.jpg) no-repeat center center; background-size: cover;">
 				<a href="#">Codename: Ico</a>
